--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "antd": "^5.4.7",
+    "national-identity-validator": "^3.0.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
