--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "Reading time",
-  "version": "1.0",
-  "description": "Add the reading time to Chrome Extension documentation articles",
+  "name": "NID Generator",
+  "version": "2.0",
+  "description": "Dummy NID Generator",
   "action": {
     "default_popup": "popup.html"
+  },
+  "icons": { 
+    "16": "nid-logo.png",
+    "32": "nid-logo.png",
+    "48": "nid-logo.png",
+    "128": "nid-logo.png" 
   }
 }
